# pseo

./: .coverage  .env  .env.example  README.md  pseo.db  pyproject.toml
src/: __init__.py  cli.py  config.py
src/checker/: __init__.py  seo_auditor.py  sitemap_generator.py
src/engine/: __init__.py  data_collector.py  data_refresher.py  keyword_planner.py  llm_generator.py  page_assembler.py
src/models/: __init__.py  database.py
src/monitor/: __init__.py  competitor_monitor.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_competitor_monitor.py  test_data_collector.py  test_models.py  test_page_assembler.py  test_seo_auditor.py  test_sitemap.py  test_utils.py
